Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/literals/BadUnderscoreLiterals.7.out
BadUnderscoreLiterals.java:14:15: compiler.err.illegal.underscore
BadUnderscoreLiterals.java:18:19: compiler.err.illegal.underscore
BadUnderscoreLiterals.java:21:16: compiler.err.illegal.underscore
BadUnderscoreLiterals.java:22:17: compiler.err.illegal.underscore
BadUnderscoreLiterals.java:25:16: compiler.err.illegal.underscore
BadUnderscoreLiterals.java:26:17: compiler.err.illegal.underscore
BadUnderscoreLiterals.java:29:17: compiler.err.illegal.underscore
BadUnderscoreLiterals.java:30:18: compiler.err.illegal.underscore
BadUnderscoreLiterals.java:31:19: compiler.err.illegal.underscore
BadUnderscoreLiterals.java:32:19: compiler.err.illegal.underscore
BadUnderscoreLiterals.java:33:18: compiler.err.illegal.underscore
BadUnderscoreLiterals.java:34:19: compiler.err.illegal.underscore
BadUnderscoreLiterals.java:37:19: compiler.err.illegal.underscore
BadUnderscoreLiterals.java:38:20: compiler.err.illegal.underscore
BadUnderscoreLiterals.java:39:21: compiler.err.illegal.underscore
BadUnderscoreLiterals.java:40:22: compiler.err.illegal.underscore
BadUnderscoreLiterals.java:41:21: compiler.err.illegal.underscore
BadUnderscoreLiterals.java:42:22: compiler.err.illegal.underscore
18 errors
